welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: too many arguments for method litMessage: ()String
litMessage(decalage)
          ^